--- a/kicks.css
+++ b/kicks.css
@@ -182,7 +182,7 @@
   
   @media (max-width: 968px) {
     .hero h1 {
-      font-size:medium;
+      font-size: 2.5em;
     }
     }
 @media (max-width: 768px) {
