--- a/shoes.css
+++ b/shoes.css
@@ -33,7 +33,7 @@
     font-size: 1.8em;
     font-weight: bold;
     font-family: fantasy;
-    color: #e91e63;
+    color: white;
   }
   .logo:hover{
     color: white;
