--- a/shoes.css
+++ b/shoes.css
@@ -32,7 +32,7 @@
   .logo {
     font-size: 1.8em;
     font-weight: bold;
-    font-family: fantasy;
+    font-family: helvetica;
     color: white;
   }
   .logo:hover{
