--- a/kicks.css
+++ b/kicks.css
@@ -60,18 +60,16 @@
   }
   
   .hero {
-    background: url(f329ab9228a94f2043586f18a807539d.jpg) no-repeat center/cover;
+    background: url(1597802.jpg) no-repeat center/cover;
    
     height: 90vh;
-    color: rgb(250, 84, 84);
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
     flex-direction: column;
-    border-bottom-left-radius: 13px;
-    border-bottom-right-radius: 13px;
-    font-family: cursive;
+    font-family: helbvetica;
   }
   
   .hero h1 {
@@ -80,7 +78,7 @@
   }
   
   .btn {
-    background-color: #e91e63;
+    background-color: black;
     color: white;
     padding: 12px 25px;
     text-decoration: none;
@@ -90,38 +88,19 @@
     cursor: pointer;
     transition: background 0.3s;
   }
-  
-  .btn:hover {
-    background-color: #d81b60;
+  .btn-shop{
+    background-color: white;
+    color: black;
+    padding: 12px 25px;
+    text-decoration: none;
+    border: none;
+    border-radius: 5px;
+    margin-top: 20px;
+    cursor: pointer;
+    transition: background 0.3s;
   }
-  
-  .products-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-template-rows: subgrid;
-    gap: 30px;
-    padding: 100px;
-  }
-  
-  .product-card {
-    background: white;
-    padding: 20px;
-    border-radius: 12px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    text-align: center;
-    transition: transform 0.3s;
-  }
-  
-  .product-card:hover {
-    transform: translateY(-5px);
-  }
-  
-  .product-card img {
-    width: 100%;
-    height: 200px;
-    object-fit: cover;
-    border-radius: 10px;
-  }
+
+
   
   h2 {
     text-align: center;
@@ -141,7 +120,7 @@
     text-align: center;
     padding: 20px;
     margin-top: 50px;
-    
+    z-index: 2000;
   }
   
  
@@ -200,17 +179,6 @@
 
   }
 }
-}
-.btn-shop {
-  background-color: #e91e63;
-  color: white;
-  padding: 12px 25px;
-  text-decoration: none;
-  border: none;
-  border-radius: 5px;
-  margin-top: 20px;
-  cursor: pointer;
-  transition: background 0.3s;
 }
 
 
