--- a/about.css
+++ b/about.css
@@ -32,7 +32,7 @@
   .logo {
     font-size: 1.8em;
     font-weight: bold;
-    font-family: fantasy;
+    font-family: helvetica;
     color: white;
   }
 
@@ -60,7 +60,7 @@
   }
   
   .hero {
-    background: url(sneaker-x499s7jambwdigab.jpg) no-repeat center/cover;
+    background: url(air-jordan-5-retro-gs-wolf-grey-hot-lava-4.jpg) no-repeat center/cover;
    
     height: 90vh;
     color: white;
