updating images on one folder called images

--- a/kicks.css
+++ b/kicks.css
@@ -68,7 +68,7 @@
 
   
   .hero {
-    background: url(1597802.jpg) no-repeat center/cover;
+    background: url(images/1597802.jpg) no-repeat center/cover;
    
     height: 100vh;
     color: white;
