--- a/shoes.css
+++ b/shoes.css
@@ -62,7 +62,7 @@
   }
   
   .hero {
-    background: url(sneaker4.jpg) no-repeat center/cover;
+    background: url(images/sneaker4.jpg) no-repeat center/cover;
    
     height: 90vh;
     color: rgb(250, 84, 84);
